--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 <section id="hero">
-    <video src="Harbiwore x Spiderman.mp4" autoplay muted loop playsinline></video>
+    <video src="Harbiwore (6).mp4" autoplay muted loop playsinline></video>
         <button class="noob" onclick="window.location.href='hero1.html';">Shop Now</button>
   </section>
   <section id="hero2">
